Fix #22 : Overflow in Tabs Standard for mobile

--- a/atui/kernel/tabs.css
+++ b/atui/kernel/tabs.css
@@ -14,6 +14,7 @@
 .atuiKernel_SectionTabsHeader
 {
      display: flex;
+     flex-wrap: wrap;
 }
 
 .atuiKernel_SectionTabsHeader > a
@@ -77,7 +78,8 @@
 
 .atuiKernel_SectionTabsStandard .atuiKernel_SectionTabsHeader
 {
-     border-bottom : 1px var(--atuiKernel_ColorschemeOB5) solid;
+     padding-bottom : 5px;
+     border-bottom : 1px var(--atuiKernel_ColorschemeOB2) solid;
 }
 
 .atuiKernel_SectionTabsStandard .atuiKernel_SectionTabsHeader > *:hover,
@@ -93,7 +95,7 @@
      height : 5px;
      background-color: var(--atuiKernel_ColorschemeOA5);
      position: absolute;
-     border-radius: 5px 5px 0 0;
+     border-radius: 5px;
      transform: translateY(10px);
 }
 
